remove post images in public, remove dependencies no longer needed

--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,10 +1,8 @@
 ---
-import { ArrowRight, ArrowLeft } from "lucide-react";
-
 const { prevUrl, nextUrl } = Astro.props;
 ---
 
-<nav aria-label="Posts Navigation" class="max-w-screen-md mx-auto">
+<nav aria-label="Posts Navigation" class="max-w-screen-md mx-auto" id="pagination" >
   {
     prevUrl && (
       <span class="flex">
@@ -13,7 +11,9 @@ const { prevUrl, nextUrl } = Astro.props;
           href={prevUrl}
           aria-label="Newer Posts"
         >
-          <ArrowLeft size={16} className={"mr-1 self-center"} />
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 mr-1 self-center">
+            <path fill-rule="evenodd" d="M11.03 3.97a.75.75 0 010 1.06l-6.22 6.22H21a.75.75 0 010 1.5H4.81l6.22 6.22a.75.75 0 11-1.06 1.06l-7.5-7.5a.75.75 0 010-1.06l7.5-7.5a.75.75 0 011.06 0z" clip-rule="evenodd" />
+          </svg>
           <span>Newer Posts</span>
         </a>
       </span>
@@ -28,7 +28,9 @@ const { prevUrl, nextUrl } = Astro.props;
           aria-label="Older Posts"
         >
           Older Posts
-          <ArrowRight size={16} className={"ml-1 self-center"} />
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 ml-1 self-center">
+            <path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 011.06 0l7.5 7.5a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 11-1.06-1.06l6.22-6.22H3a.75.75 0 010-1.5h16.19l-6.22-6.22a.75.75 0 010-1.06z" clip-rule="evenodd" />
+          </svg>
         </a>
       </span>
     )
