update prettier and plugins, reformat documents

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,15 +2,12 @@
 import CopyButton from "../components/CopyButton";
 ---
 
-<footer class=" mt-8 mb-8 max-w-screen-md mx-auto flex justify-between font-content px-2">
+<footer
+  class="mt-8 mb-8 max-w-screen-md mx-auto flex justify-between font-content px-2"
+>
   <div class="flex gap-4 self-center max-[420px]:flex-col max-[420px]:gap-2">
-    <a href="https://github.com/trevortylerlee" class=""
-      >Github</a
-    >
-    <a
-      href="https://www.linkedin.com/in/trevortylerlee/"
-      class="">LinkedIn</a
-    >
+    <a href="https://github.com/trevortylerlee" class="">Github</a>
+    <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a>
     <CopyButton
       client:load
       copyText="trevortylerlee@gmail.com"
