--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -17,17 +17,17 @@ const { emoji, type } = Astro.props;
   }
 
   .secondary {
-    color: #A3A3A3;
+    color: #a3a3a3;
     background: #121212;
   }
 
   .technology {
-    color: #68A6F8;
+    color: #68a6f8;
     background: #0d1523;
   }
 
   .warning {
-    color: #F19E3A;
+    color: #f19e3a;
     background: #1f1300;
   }
 
