add format as parameter to formatDate function

--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -18,7 +18,7 @@ const { date, href, title, description, last } = Astro.props;
       <p
         class="self-baseline whitespace-nowrap text-xs opacity-75 text-content"
       >
-        {formatDate(date)}
+        {formatDate(date, "short")}
       </p>
     </div>
   </div>
