--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -128,6 +128,10 @@
         text-decoration: none;
     }
 
+    #logo:hover {
+        text-decoration: underline;
+    }
+
     .hr-bg {
         background-color: rgb(var(--gray-10));
     }
