use atkinson hyperlegible and jetbrains mono

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import CopyButton from "../components/CopyButton";
 ---
 
 <footer
-  class="py-8 max-w-screen-md mx-auto flex justify-between font-content px-2"
+  class="py-8 max-w-screen-md mx-auto flex justify-between font-sans px-2"
 >
   <div class="flex gap-4 self-center max-[420px]:flex-col max-[420px]:gap-2">
     <a href="https://github.com/trevortylerlee" class="">Github</a>
