--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,7 @@
 >
     <a
       id="logo"
-      class="px-2 py-2.5 text-content hover:bg-accent-blue/20 hover:text-content"
+      class="px-2 py-2.5 text-content hover:bg-accent-blue/20 hover:text-content font-sans"
       href="/"
       aria-label="Go to homepage"
       title="Go to homepage"
