--- a/src/styles/CodeBlock.module.css
+++ b/src/styles/CodeBlock.module.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"); */
 
 :root {
   --size-300: 0.75rem;
@@ -18,7 +18,7 @@ pre {
 
 code {
   border-radius: 0.5rem;
-  font-family: monospace;
+  font-family: 'JetBrains Mono';
   direction: ltr;
   font-size: var(--size-300);
 }
