--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -173,3 +173,7 @@
 #pagination *:visited  {
     color: rgb(var(--primary));
 }
+
+h1, h2, h3, h4, h5, h6, button {
+    font-family: sans-serif;
+}
