logo and pagination style fixes, add sound to toast example

--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -11,7 +11,7 @@ const { prevUrl, nextUrl } = Astro.props;
     prevUrl && (
       <span class="flex">
         <a
-          class="mb-8 mt-8 flex p-2 no-underline hover:bg-accent-blue/20"
+          class="mb-8 mt-8 flex p-2 !no-underline hover:bg-accent-blue/20"
           href={prevUrl}
           aria-label="Newer Posts"
         >
@@ -36,7 +36,7 @@ const { prevUrl, nextUrl } = Astro.props;
     nextUrl && (
       <span class="flex justify-end">
         <a
-          class="mb-8 mt-8 flex p-2 no-underline hover:bg-accent-blue/20"
+          class="mb-8 mt-8 flex p-2 !no-underline hover:bg-accent-blue/20"
           href={nextUrl}
           aria-label="Older Posts"
         >
