edit icons, optimize assets, update readme

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,15 +1,15 @@
 <nav
   class="flex items-center justify-between py-4 px-2 align-middle max-w-screen-md mx-auto"
 >
-    <a
-      id="logo"
-      class="px-2 py-2.5 text-content hover:bg-accent-blue/20 hover:text-content font-sans"
-      href="/"
-      aria-label="Go to homepage"
-      title="Go to homepage"
-    >
-      trevortylerlee.com
-    </a>
+  <a
+    id="logo"
+    class="px-2 py-2.5 text-content hover:bg-accent-blue/20 hover:text-content font-sans"
+    href="/"
+    aria-label="Go to homepage"
+    title="Go to homepage"
+  >
+    trevortylerlee.com
+  </a>
   <button
     data-color-mode-switch
     class="themeToggle px-2 py-2"
@@ -21,87 +21,89 @@
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
         fill="currentColor"
-        class="h-6 w-6"
+        class="h-5 w-5"
       >
         <path
-          fill-rule="evenodd"
-          d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z"
-          clip-rule="evenodd"></path>
+          d="M18.1289 15.7031C11.7891 15.7031 7.73438 11.7305 7.73438 5.37891C7.73438 4.06641 8.05078 2.19141 8.47266 1.21875C8.57812 0.949219 8.60156 0.785156 8.60156 0.667969C8.60156 0.351562 8.36719 0 7.91016 0C7.78125 0 7.5 0.0351562 7.24219 0.128906C2.90625 1.86328 0 6.52734 0 11.4375C0 18.3281 5.25 23.25 12.1172 23.25C17.168 23.25 21.5391 20.1914 22.9922 16.3711C23.0977 16.1016 23.1211 15.8203 23.1211 15.7148C23.1211 15.2812 22.7578 14.9883 22.4297 14.9883C22.2773 14.9883 22.1484 15.0234 21.9258 15.0938C21.0234 15.3867 19.5703 15.7031 18.1289 15.7031Z"
+        ></path>
       </svg>
     </span>
     <span class="themeIcon light" aria-hidden="true">
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 24 24"
+        viewBox="0 0 26 26"
         fill="currentColor"
-        class="h-6 w-6"
+        class="h-5 w-5"
       >
         <path
-          d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"
+          d="M12.6797 4.55859C13.2305 4.55859 13.6875 4.10156 13.6875 3.53906V1.01953C13.6875 0.457031 13.2305 0 12.6797 0C12.1172 0 11.6602 0.457031 11.6602 1.01953V3.53906C11.6602 4.10156 12.1172 4.55859 12.6797 4.55859ZM18.4219 6.96094C18.8203 7.34766 19.4648 7.35938 19.8633 6.96094L21.6562 5.16797C22.043 4.78125 22.043 4.125 21.6562 3.72656C21.2695 3.33984 20.625 3.33984 20.2266 3.72656L18.4219 5.53125C18.0352 5.92969 18.0352 6.57422 18.4219 6.96094ZM20.8008 12.7148C20.8008 13.2656 21.2695 13.7227 21.8203 13.7227H24.3398C24.8906 13.7227 25.3477 13.2656 25.3477 12.7148C25.3477 12.1641 24.8906 11.6953 24.3398 11.6953H21.8203C21.2695 11.6953 20.8008 12.1641 20.8008 12.7148ZM18.4219 18.4688C18.0352 18.8672 18.0352 19.5117 18.4219 19.8984L20.2266 21.7148C20.625 22.0898 21.2695 22.0781 21.6562 21.7031C22.043 21.3047 22.043 20.6602 21.6562 20.2734L19.8516 18.4688C19.4648 18.0938 18.8203 18.0938 18.4219 18.4688ZM12.6797 20.8711C12.1172 20.8711 11.6602 21.3281 11.6602 21.8789V24.4102C11.6602 24.9609 12.1172 25.418 12.6797 25.418C13.2305 25.418 13.6875 24.9609 13.6875 24.4102V21.8789C13.6875 21.3281 13.2305 20.8711 12.6797 20.8711ZM6.92578 18.4688C6.52734 18.0938 5.87109 18.0938 5.48438 18.4688L3.69141 20.2617C3.30469 20.6484 3.30469 21.293 3.67969 21.6914C4.06641 22.0664 4.72266 22.0781 5.12109 21.7031L6.91406 19.8984C7.30078 19.5117 7.30078 18.8672 6.92578 18.4688ZM4.54688 12.7148C4.54688 12.1641 4.07812 11.6953 3.52734 11.6953H1.00781C0.457031 11.6953 0 12.1641 0 12.7148C0 13.2656 0.457031 13.7227 1.00781 13.7227H3.52734C4.07812 13.7227 4.54688 13.2656 4.54688 12.7148ZM6.91406 6.96094C7.30078 6.58594 7.30078 5.91797 6.92578 5.53125L5.13281 3.72656C4.74609 3.35156 4.08984 3.33984 3.70312 3.72656C3.31641 4.125 3.31641 4.78125 3.69141 5.15625L5.48438 6.96094C5.87109 7.34766 6.51562 7.34766 6.91406 6.96094Z"
+        ></path>
+        <path
+          d="M12.668 18.6914C15.9258 18.6914 18.6328 15.9844 18.6328 12.7148C18.6328 9.43359 15.9258 6.72656 12.668 6.72656C9.41017 6.72656 6.70312 9.43359 6.70312 12.7148C6.70312 15.9844 9.41017 18.6914 12.668 18.6914Z"
         ></path>
       </svg>
     </span>
   </button>
+
+  <style>
+    .dark,
+    .light {
+      pointer-events: none;
+    }
+
+    .dark.animate {
+      animation: themeToggleBackwards 200ms ease-out forwards;
+      transition: 0.15s ease-in;
+    }
+
+    .light.animate {
+      animation: themeToggleForwards 200ms ease-out forwards;
+      transition: 0.15s ease-in;
+    }
+
+    @keyframes themeToggleForwards {
+      0% {
+        transform: rotate(-60deg);
+        scale: 1;
+      }
+
+      50% {
+        scale: 1.2;
+      }
+
+      100% {
+        transform: rotate(0deg);
+        scale: 1;
+      }
+    }
+
+    @keyframes themeToggleBackwards {
+      0% {
+        transform: rotate(60deg);
+        scale: 1;
+      }
+
+      50% {
+        scale: 1.2;
+      }
+
+      100% {
+        transform: rotate(0deg);
+        scale: 1;
+      }
+    }
+  </style>
+
+  <script>
+    const darkIcon = document.querySelector(".dark");
+    const lightIcon = document.querySelector(".light");
+    const themeToggle = document.querySelector("#themeToggle");
+
+    themeToggle?.addEventListener("click", () => {
+      darkIcon?.classList.remove("animate");
+      darkIcon?.classList.add("animate");
+      lightIcon?.classList.remove("animate");
+      lightIcon?.classList.add("animate");
+    });
+  </script>
 </nav>
-
-<style>
-  .dark,
-  .light {
-    pointer-events: none;
-  }
-
-  .dark.animate {
-    animation: themeToggleBackwards 200ms ease-out forwards;
-    transition: 0.15s ease-in;
-  }
-
-  .light.animate {
-    animation: themeToggleForwards 200ms ease-out forwards;
-    transition: 0.15s ease-in;
-  }
-
-  @keyframes themeToggleForwards {
-    0% {
-      transform: rotate(-60deg);
-      scale: 1;
-    }
-
-    50% {
-      scale: 1.2;
-    }
-
-    100% {
-      transform: rotate(0deg);
-      scale: 1;
-    }
-  }
-
-  @keyframes themeToggleBackwards {
-    0% {
-      transform: rotate(60deg);
-      scale: 1;
-    }
-
-    50% {
-      scale: 1.2;
-    }
-
-    100% {
-      transform: rotate(0deg);
-      scale: 1;
-    }
-  }
-</style>
-
-<script>
-  const darkIcon = document.querySelector(".dark");
-  const lightIcon = document.querySelector(".light");
-  const themeToggle = document.querySelector("#themeToggle");
-
-  themeToggle?.addEventListener("click", () => {
-    darkIcon?.classList.remove("animate");
-    darkIcon?.classList.add("animate");
-    lightIcon?.classList.remove("animate");
-    lightIcon?.classList.add("animate");
-  });
-</script>
