fix for theme toggle reloading window on deployed site

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -110,9 +110,9 @@
         currentUrl !== "http://localhost:3000/" &&
         currentUrl !== "http://localhost:3000/posts" &&
         currentUrl !== "http://localhost:3000/404" &&
-        currentUrl !== "https://trevortylerlee.com/" &&
-        currentUrl !== "https://trevortylerlee.com/posts" &&
-        currentUrl !== "https://trevortylerlee.com/404"
+        currentUrl !== "https://www.trevortylerlee.com/" &&
+        currentUrl !== "https://www.trevortylerlee.com/posts" &&
+        currentUrl !== "https://www.trevortylerlee.com/404"
       ) {
         location.reload();
       }
