--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -12,16 +12,17 @@
   </a>
   <button
     data-color-mode-switch
-    class="themeToggle px-2 py-2"
+    class="themeToggle px-2 py-2 rounded-full hover:bg-content/20"
     id="themeToggle"
-    aria-label="Toggle light and dark mode"
+    aria-label="Toggle theme"
+    title="Toggle theme"
   >
     <span class="themeIcon dark opacity-75" aria-hidden="true">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
-        fill="currentColor"
         class="h-5 w-5"
+        fill="currentColor"
       >
         <path
           d="M18.1289 15.7031C11.7891 15.7031 7.73438 11.7305 7.73438 5.37891C7.73438 4.06641 8.05078 2.19141 8.47266 1.21875C8.57812 0.949219 8.60156 0.785156 8.60156 0.667969C8.60156 0.351562 8.36719 0 7.91016 0C7.78125 0 7.5 0.0351562 7.24219 0.128906C2.90625 1.86328 0 6.52734 0 11.4375C0 18.3281 5.25 23.25 12.1172 23.25C17.168 23.25 21.5391 20.1914 22.9922 16.3711C23.0977 16.1016 23.1211 15.8203 23.1211 15.7148C23.1211 15.2812 22.7578 14.9883 22.4297 14.9883C22.2773 14.9883 22.1484 15.0234 21.9258 15.0938C21.0234 15.3867 19.5703 15.7031 18.1289 15.7031Z"
@@ -32,7 +33,6 @@
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 26 26"
-        fill="currentColor"
         class="h-5 w-5"
       >
         <path
