--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,11 +19,7 @@ const pageTitle = "Trevor Lee | Homepage";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div
-    style="view-transition-name: test"
-    class="max-w-screen-md mx-auto"
-    transition:animate="morph"
-  >
+  <div class="max-w-screen-md mx-auto">
     <div class="flex flex-col items-center gap-6 px-2 pb-16 pt-24 sm:flex-row">
       <div class="flex items-center justify-center">
         <Image
